--- a/Outros/testes.html
+++ b/Outros/testes.html
@@ -1,52 +1,94 @@
-<table class="table table-bordered">
-    <thead>
-    <tr>
-    <th style="width: 10px">#</th>
-    <th>Task</th>
-    <th>Progress</th>
-    <th style="width: 40px">Label</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-    <td>1.</td>
-    <td>Update software</td>
-    <td>
-    <div class="progress progress-xs">
-    <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
+{% extends "layout.html" %}
+{% block content %}
+
+<div class="content-wrapper" style="min-height: 1302.12px;">
+
+  <!-- Main content -->
+  <section class="content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Defina como será gerado seus jogos</h3>
+            </div>
+
+            <div class="alinha-cols">
+              <div class="aling-div">
+                <ul class="list-group">
+                  <form action="/fillgen_change" method="post" enctype="multipart/form-data">
+                    <label for="lname"><strong>Dezenas Principais</strong></label>
+
+                    <div>
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <table class="table table-bordered" role="grid" aria-describedby="example2_info">
+                            <tbody>
+                              {% for cont in table_listnum %}
+                              <tr>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.0}}" value="{{cont.0}}"> {{cont.0}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.1}}" value="{{cont.1}}"> {{cont.1}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.2}}" value="{{cont.2}}"> {{cont.2}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.3}}" value="{{cont.3}}"> {{cont.3}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.4}}" value="{{cont.4}}"> {{cont.4}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.5}}" value="{{cont.5}}"> {{cont.5}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.6}}" value="{{cont.6}}"> {{cont.6}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.7}}" value="{{cont.7}}"> {{cont.7}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.8}}" value="{{cont.8}}"> {{cont.8}}</td>
+                                <td class="td-alin"><input type="checkbox" name="{{cont.9}}" value="{{cont.9}}"> {{cont.9}}</td>
+                              </tr>
+                              {% endfor %}
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <div class="custom-control custom-switch">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
+                          <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
+                        </div>
+                        <div class="custom-control custom-switch">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                          <label class="custom-control-label" for="customSwitch2">MegaSena</label>
+                        </div>
+                        <div class="custom-control custom-switch">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
+                          <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
+                        </div>
+                      </div>
+                    </div>
+                    <label for="linha"><strong>Quantidade de Linhas </strong></label><br>
+                    <input type="text" name="numero-linha">
+                    <br><br>
+                    <label for="dez2"><strong>Dezenas Extras </strong></label><br>
+                    <input type="text" name="dez2">
+                    <br><br>
+                    <div>
+                      <input type="submit" value="Gerar Jogos" id="alinha-button">
+                    </div>
+                  </form>
+                  <ul>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="aling-back" id="back-i">
+            <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
+          </div>
+
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
     </div>
-    </td>
-    <td><span class="badge bg-danger">55%</span></td>
-    </tr>
-    <tr>
-    <td>2.</td>
-    <td>Clean database</td>
-    <td>
-    <div class="progress progress-xs">
-    <div class="progress-bar bg-warning" style="width: 70%"></div>
-    </div>
-    </td>
-    <td><span class="badge bg-warning">70%</span></td>
-    </tr>
-    <tr>
-    <td>3.</td>
-    <td>Cron job running</td>
-    <td>
-    <div class="progress progress-xs progress-striped active">
-    <div class="progress-bar bg-primary" style="width: 30%"></div>
-    </div>
-    </td>
-    <td><span class="badge bg-primary">30%</span></td>
-    </tr>
-    <tr>
-    <td>4.</td>
-    <td>Fix and squish bugs</td>
-    <td>
-    <div class="progress progress-xs progress-striped active">
-    <div class="progress-bar bg-success" style="width: 90%"></div>
-    </div>
-    </td>
-    <td><span class="badge bg-success">90%</span></td>
-    </tr>
-    </tbody>
-    </table>
+    <!-- /.container-fluid -->
+  </section>
+  <!-- /.content -->
+</div>
+
+</div>
+
+{% endblock content %}
